packages/parser/test/parser/E0170.txt
obj Test { throw err
===== err =====
anonymous:1:11: ParseError: E0170 - Expected object declaration body property or method
1 | obj Test { throw err
  |           ^
